[package]
name = "sigma-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
glob = "0.3.1"
lazy_static = "1.5.0"
regex = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0"
cidr = { version = "0.3.0" }
pest = { version = "2.7.14", features = ["pretty-print"] }
pest_derive = { version = "2.7.14", features = ["grammar-extras"] }
uuid = { version = "1.11.0", features = ["v4", "v7", "serde"] }
